--- a/index.html
+++ b/index.html
@@ -60,7 +60,111 @@
 
     <!-- ----Campus---- -->
     <section class="campus">
+        <h1>Our Global Campus</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, autem.</p>
 
+        <div class="row">
+            <div class="campus-col">
+                <img src="./imgs/london.png" alt="">
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="./imgs/newyork.png" alt="">
+                <div class="layer">
+                    <h3>NEWYORK</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="./imgs/washington.png" alt="">
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     <!-- -----facilites-----  -->
+
+    <section class="facilities">
+        <h1>Our Facilites</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, autem.</p>
+
+        <div class="row">
+            <div class="facilities-col">
+                <img src="./imgs/library.png" alt="">
+                <h3>World Class library</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
+            </div>
+            <div class="facilities-col">
+                <img src="./imgs/basketball.png" alt="">
+                <h3>Largest Play Ground</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
+            </div>
+            <div class="facilities-col">
+                <img src="./imgs/cafeteria.png" alt="">
+                <h3>Tasty and Healthy Food</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ------testimonials-------- -->
+
+    <section class="testimonials">
+        <h1>What Our Students Says</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, autem.</p>
+
+        <div class="row">
+            <div class="testimonial-col">
+                <img src="./imgs/user1.jpg" alt="">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis autem ratione facilis sint earum optio voluptates aliquid iste ab est repellat molestias soluta harum sunt repudiandae, minus corrupti, nisi vitae.</p>
+                    <h3>Christine Berley</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+            </div>
+            <div class="testimonial-col">
+                <img src="./imgs/user2.jpg" alt="">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis autem ratione facilis sint earum optio voluptates aliquid iste ab est repellat molestias soluta harum sunt repudiandae, minus corrupti, nisi vitae.</p>
+                    <h3>David Byer</h3>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ----Call To Action----- -->
+    <section class="cta">
+        <h1>Enroll for our various online courses <br>Anywhere from the World</h1>
+        <a href="" class="hero-btn">CONTACT US</a>
+
+    </section>
+
+    <!-- ----Footer----- -->
+
+    <section class="footer">
+        <h4>About US</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, accusantium blanditiis aliquid laborum ea aperiam impedit culpa in odit distinctio velit ex fugit <br> praesentium voluptatum reprehenderit quod incidunt porro sit?</p>
+
+        <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>            
+        </div>
+        <p><i class="fa-regular fa-copyright"></i> Lorem ipsum dolor sit amet consectetur.</p>
     </section>
 
     <!-- Javascript for Toggle Menu -->
