contact page done

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <title>Courses</title>
+    <title>Contact</title>
 </head>
 <body>
     <section class="sub-header">
@@ -28,55 +28,52 @@
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
 
-        <h1>Our Courses</h1>
+        <h1>Contact Us</h1>
 
     </section>
 
-    <!-- ---Courses content---- -->
-    <section class="course">
-        <h1>Courses We Offer</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, autem.</p>
+    <!-- ---contact us content---- -->
+    <section class="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d391768.35543835245!2d32.482569402600895!3d39.90356622010039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d347d520732db1%3A0xbdc57b0c0842b8d!2sAnkara!5e0!3m2!1str!2str!4v1660476091100!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+    </section>
+
+    <section class="contact-us">
         <div class="row">
-            <div class="course-col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, quibusdam excepturi ut assumenda dignissimos vel voluptatum explicabo porro, nostrum tenetur aliquam odit, harum minima doloremque alias quia cum at tempora.</p>
+            <div class="contact-col">
+                <div>
+                    <i class="fa-solid fa-house"></i>
+                    <span>
+                        <h5>XYZ Road , ABC Building</h5>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+                    <span>
+                        <h5>+90 312 999 99 99</h5>
+                        <p>Monday to Saturday, 10AM to 6PM</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>
+                        <h5>info@bbbb.edu.tr</h5>
+                        <p>Email us your query</p>
+                    </span>
+                </div>
             </div>
-            <div class="course-col">
-                <h3>Degree</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, quibusdam excepturi ut assumenda dignissimos vel voluptatum explicabo porro, nostrum tenetur aliquam odit, harum minima doloremque alias quia cum at tempora.</p>
-            </div>
-            <div class="course-col">
-                <h3>Post Graduation</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, quibusdam excepturi ut assumenda dignissimos vel voluptatum explicabo porro, nostrum tenetur aliquam odit, harum minima doloremque alias quia cum at tempora.</p>
+            <div class="contact-col">
+                <form action="">
+                    <input type="text" placeholder="Enter Your Name" required>
+                    <input type="email" placeholder="Enter Your Email Address" required>
+                    <input type="text" placeholder="Enter Your Email Subject" required>
+                    <textarea rows="8" placeholder="message..." required></textarea>
+                    <button type="submit" class="hero-btn red-btn">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
-
-    <!-- -----facilites----- -->
-    <section class="facilities">
-        <h1>Our Facilites</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, autem.</p>
-
-        <div class="row">
-            <div class="facilities-col">
-                <img src="./imgs/library.png" alt="">
-                <h3>World Class library</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
-            </div>
-            <div class="facilities-col">
-                <img src="./imgs/basketball.png" alt="">
-                <h3>Largest Play Ground</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
-            </div>
-            <div class="facilities-col">
-                <img src="./imgs/cafeteria.png" alt="">
-                <h3>Tasty and Healthy Food</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint! In dolor corporis rem, ex provident a sapiente recusandae eveniet!</p>
-            </div>
-        </div>
-    </section>
-
 
     <!-- ----Footer----- -->
 
