--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,11 @@
                 </div>
             </div>
             <div class="contact-col">
-                <form action="">
-                    <input type="text" placeholder="Enter Your Name" required>
-                    <input type="email" placeholder="Enter Your Email Address" required>
-                    <input type="text" placeholder="Enter Your Email Subject" required>
-                    <textarea rows="8" placeholder="message..." required></textarea>
+                <form action="#">
+                    <input type="text" name="name" placeholder="Enter Your Name" required>
+                    <input type="email" name="email" placeholder="Enter Your Email Address" required>
+                    <input type="text" name="subject" placeholder="Enter Your Email Subject" required>
+                    <textarea rows="8" name="message" placeholder="message..." required></textarea>
                     <button type="submit" class="hero-btn red-btn">Send Message</button>
                 </form>
             </div>
